# Autonomous-Mapping-System

./: README.md
src/LIO-SAM/config/: params.yaml
src/LIO-SAM/launch/: run.launch
src/LIO-SAM/src/: mapOptmization.cpp
src/ams_configuration/: CMakeLists.txt  package.xml
src/ams_configuration/launch/: integration_test_fixed.launch
src/ams_configuration/module_configs/move_base_config/: costmap_common_integrated.yaml  costmap_common_integrated_fixed.yaml  costmap_common_sim.yaml  costmap_global_laser.yaml  costmap_local.yaml  planner.yaml
src/ams_configuration/module_configs/move_base_config/launch/: move_base_integrated.launch  move_base_integrated_fixed.launch  move_base_sim.launch
src/ams_configuration/module_configs/tare_launch/: explore_ams_indoor.launch
src/ams_configuration/robot/: ams_robot.gazebo.xacro  ams_robot.urdf.xacro
src/ams_configuration/rviz/: AMS_visualization.rviz
src/ams_configuration/worlds/: aws_hospital.world
src/body_corrected_publisher/: CMakeLists.txt  package.xml
src/body_corrected_publisher/src/: body_corrected_publisher.cpp
src/dynamic_logistics_warehouse/worlds/: warehouse.world  warehouse_.world
src/init_tf_publisher/: CMakeLists.txt  package.xml
src/init_tf_publisher/src/: publish_init.cpp
src/loam_interface/launch/: loam_interface_integrated.launch  loam_interface_sim.launch
src/navigation/dwa_local_planner/src/: dwa_planner_ros.cpp
src/obstacle_distance_measurement/: CMakeLists.txt  package.xml
src/obstacle_distance_measurement/src/: obstacle_distance_measurement.cpp
src/odometry_offset_fixer/: CMakeLists.txt  package.xml
src/odometry_offset_fixer/launch/: odometry_offset_fixer.launch
src/odometry_offset_fixer/src/: odometry_offset_fixer.cpp
src/point_to_pose/: CMakeLists.txt  package.xml
src/point_to_pose/launch/: point_to_pose.launch
src/point_to_pose/src/: point_to_pose.cpp
src/tare_planner/config/: ams_indoor.yaml  tib_world.yaml
src/tare_planner/include/planning_env/: planning_env.h
src/tare_planner/include/rolling_occupancy_grid/: rolling_occupancy_grid.h
src/tare_planner/rviz/: tare_planner_ground.rviz
src/tare_planner/src/planning_env/: planning_env.cpp
src/tare_planner/src/rolling_occupancy_grid/: rolling_occupancy_grid.cpp
src/tare_planner/src/sensor_coverage_planner/: sensor_coverage_planner_ground.cpp
src/visualization_tools/launch/: visualization_tools_exploration.launch  visualization_tools_integrated.launch
src/visualization_tools/src/: visualizationTools.cpp
src/waypoint_rviz_plugin/: package.xml
src/waypoint_rviz_plugin/include/: waypoint_tool.h
src/waypoint_rviz_plugin/src/: waypoint_tool.cpp
